test/should_pass/retype_006.grg
using attrib_model_001;

rule r {
	pattern {
		x: NINT;
	}
	modify {
		y: NBOOL<x>;
	}
}
